Добавлено именение счетчиков. Часть кода преработана, испралвлены ошибки